2020-12-09  Simon Marchi  <simon.marchi@polymtl.ca>

	* gdbtypes.c (get_discrete_low_bound, get_discrete_high_bound):
	Return {} instead of false.
	(get_discrete_bounds): Compute high bound only if low bound is
	valid.

2020-12-09  Simon Marchi  <simon.marchi@efficios.com>

	PR 26875, PR 26901
	* gdbtypes.c (get_discrete_low_bound): Make non-static.
	(get_discrete_high_bound): Make non-static.
	* gdbtypes.h (get_discrete_low_bound): New declaration.
	(get_discrete_high_bound): New declaration.
	* valarith.c (value_subscript): Only fetch high bound if
	necessary.

2020-12-09  Simon Marchi  <simon.marchi@efficios.com>

	* gdbtypes.c (get_discrete_bounds): Implement with
	get_discrete_low_bound and get_discrete_high_bound.
	(get_discrete_low_bound): New.
	(get_discrete_high_bound): New.

2020-12-09  Simon Marchi  <simon.marchi@efficios.com>

	* gdbtypes.h (get_discrete_bounds): Return bool, adjust all
	callers.
	* gdbtypes.c (get_discrete_bounds): Return bool.

2020-12-09  Simon Marchi  <simon.marchi@efficios.com>

	* ada-lang.c (ada_value_slice_from_ptr): Adjust.
	(ada_value_slice): Adjust.
	(pos_atr): Adjust.
	* gdbtypes.c (get_discrete_bounds): Adjust.
	(discrete_position): Return optional.
	* gdbtypes.h (discrete_position): Return optional.

2020-12-06  Giancarlo Frix  <gfrix@rocketsoftware.com>  (tiny change)

	PR breakpoints/27009
	* s390-tdep.h (op_bc): Correct BC opcode value.

2020-12-04  Shahab Vahedi  <shahab@synopsys.com>

	PR tdep/27015
	* arc-linux-tdep.c (collect_register): Populate "eret" by
	"pc" value from the regcache when asked for "pc" value.

2020-11-29  Hannes Domani  <ssbssa@yahoo.de>

	PR tui/26973
	* tui/tui-layout.c (tui_apply_current_layout): Don't delete the
	static locator win info.

2020-11-06  Romain Geissler  <romain.geissler@amadeus.com>

	PR python/26832
	* configure: Regenerate.
	* configure.ac: Check for python modules ctypes instead of
	itertools.

2020-10-24  Joel Brobecker  <brobecker@adacore.com>
