@@ -1,3 +1,10 @@
+2020-09-28  Tom Tromey  <tom@tromey.com>
+
+	* infrun.c (displaced_step_fixup, thread_still_needs_step_over)
+	(handle_signal_stop): Update.
+	* procfs.c (procfs_target::insert_watchpoint): Update.
+	* target.h (target_have_steppable_watchpoint): Now a function.
+
 2020-12-09  Simon Marchi  <simon.marchi@polymtl.ca>
 
 	* gdbtypes.c (get_discrete_low_bound, get_discrete_high_bound):
